updated subnetconfig parsing for isc-dhcp-server, added gui logger window
Signed-off-by: fadedreamz <fadedreamz@gmail.com>

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -114,6 +114,16 @@
       <property name="title">
        <string>GroupBox</string>
       </property>
+      <widget class="QTextEdit" name="logWindow">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>40</y>
+         <width>461</width>
+         <height>121</height>
+        </rect>
+       </property>
+      </widget>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_3">
